[tool.poetry]
name = "hero"
version = "0.1.0"
description = ""
authors = ["TaiHui <1174501146@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
pydantic = "^1.9.1"
aiofile = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
